--- a/radarnaval/src/app/globals.css
+++ b/radarnaval/src/app/globals.css
@@ -1,3 +1,20 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
+
+@font-face{
+  font-family: 'Valera Round';
+  src: url('../../public/font/VarelaRound-Regular.ttf') format('truetype');
+}
+
+@font-face{
+  font-family: 'Rubik';
+  src: url('../../public/font/Rubik-VariableFont_wght.ttf') format('truetype');
+}
